# xiaozhi-linux

./: .gitignore  CMakeLists.txt  toolchain-luckfox-pico.cmake  依赖.md
cmake/: toolchain-luckfox-pico.cmake
common/: CMakeLists.txt
common/include/: cfg.h  ipc_udp.h
common/src/: ipc_udp.c
control_center/: CMakeLists.txt  control_center.cpp
gui/: CMakeLists.txt
gui/lv_100ask_xz_ai/: CMakeLists.txt
net_bridge/: Cargo.toml
net_bridge/src/: main.rs
sound_app/: CMakeLists.txt
